syntax = "proto3";

package o5.aws.deployer.v1.service;

import "google/api/annotations.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "o5/aws/deployer/v1/cluster.proto";

option go_package = "github.com/pentops/o5-deploy-aws/gen/o5/aws/deployer/v1/awsdeployer_spb";

service ClusterQueryService {
  option (j5.ext.v1.service).state_query.entity = "cluster";
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/clusters"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc GetCluster(GetClusterRequest) returns (GetClusterResponse) {
    option (google.api.http) = {get: "/deployer/v1/q/clusters/{cluster_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc ListClusterEvents(ListClusterEventsRequest) returns (ListClusterEventsResponse) {
    option (google.api.http) = {
      post: "/deployer/v1/q/clusters/{cluster_id}/events"
      body: "*"
    };
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

message GetClusterRequest {
  string cluster_id = 1;
}

message GetClusterResponse {
  o5.aws.deployer.v1.ClusterState state = 1;
  repeated o5.aws.deployer.v1.ClusterEvent events = 2;
}

message ListClusterEventsRequest {
  string cluster_id = 1;

  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
}

message ListClusterEventsResponse {
  repeated o5.aws.deployer.v1.ClusterEvent events = 1;

  j5.list.v1.PageResponse page = 100;
}

message ListClustersRequest {
  j5.list.v1.PageRequest page = 100;
  j5.list.v1.QueryRequest query = 101;
  option (j5.list.v1.list_request) = {
    sort_tiebreaker: ["keys.cluster_id"]
  };
}

message ListClustersResponse {
  repeated o5.aws.deployer.v1.ClusterState clusters = 1;

  j5.list.v1.PageResponse page = 100;
}
